modified:   index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="/recipes/tuscan-flank-beef.html">Tuscan Flank Steak</a>
+    <a href="./recipes/tuscan-flank-beef.html">Tuscan Flank Steak</a>
 
 </body>
 </html>
